--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("./img/photo_5.jpg") top right no-repeat;
+  background: url("../img/photo_5.jpg") top right no-repeat;
   background-size:auto;
   position: relative;
 }
